@@ -1,3 +1,9 @@
+2019-04-17 Magnus Hagdorn
+ * piccolo3/client/Piccolo.py: add method to start autointegration
+ * piccolo3/client/PiccoloSpectrometer.py: add methods to handle
+   autointegration status
+ * setup.py: require correct package
+
 2019-03-29 Magnus Hagdorn
  * piccolo3/client/PiccoloDataDir.py: add methods to get list of runs; list of
    spectra and to get spectra
